<resources>
    <string name="Transaction_new">New Transaction</string>
    <string name="Transaction_filter">Transaction Filter</string>
    <string name="app_name">elContador</string>
    <string name="new_transaction_title">New Transaction</string>
    <string name="receive">Receive</string>
    <string name="amount">Amount</string>
    <string name="paid_by">Paid by</string>
    <string name="comments">Comments</string>
    <string name="comments_hint">Comments</string>
    <string name="submit">Submit</string>
    <string name="cash_out">Cash out</string>
    <string name="cash_in">Cash in</string>
    <string name="tenants">Tenants</string>
    <string name="employees">Employees</string>
    <string name="shops_storage">Stores Storage</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="homepage_title">%1$s, %2$s!</string>
    <string name="settings">Settings</string>
    <string name="filter_transactions">Filter Transactions</string>
    <string-array name="category_items">
        <item>Others</item>
        <item>Rent</item>
        <item>Salary</item>
        <item>Toilets</item>
        <item>Purchases</item>
        <item>Deposits</item>
    </string-array>
    <string-array name="rent_subcategory_items">
        <item>Subcategory</item>
        <item>Rent</item>
        <item>Deposit</item>
        <item>Maintenance</item>
        <item>Reimbursement</item>
    </string-array>
    <string-array name="salary_subcategory_items">
        <item>Subcategory</item>
        <item>Weekly</item>
        <item>Fortnightly</item>
        <item>Commission</item>
    </string-array>
    <string-array name="toilets_subcategory_items">
        <item>Subcategory</item>
        <item>Entrance Fee</item>
        <item>Paper</item>
        <item>Towels</item>
    </string-array>
    <string-array name="purchases_subcategory_items">
        <item>Subcategory</item>
        <item>Construction Materials</item>
        <item>Supplies</item>
        <item>Rubbish</item>
    </string-array>
    <string-array name="deposits_subcategory_items">
        <item>Subcategory</item>
        <item>Cash from company</item>
        <item>Cash for company</item>
    </string-array>
    <string name="log_out">Log out</string>
    <string name="new_transaction">new_transaction</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="filter">Filter</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="pay_to">Pay to</string>
    <string name="stakeholder">Stakeholder</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="select_a_category">Select a category</string>
    <string name="select_a_sub_category">Select a sub-Category</string>
    <string name="register_log_in">Register New Log In</string>
    <string name="change_password">Change Password</string>
    <string name="budget">Budget: $%1$.2f</string>
    <string name="subtotal">Subtotal: $%1$.2f</string>
    <string name="zero_amount">Please, fill in the desired amount.</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="delete">Delete</string>
    <string name="change_pic">Change Picture</string>
    <string name="all_stakeholders">All Stakeholders</string>
    <string name="select_stakeholder">Select A Stakeholder</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="textview">TextView</string>
    <string name="role">Role:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string-array name="roles">
        <item>Empleado</item>
        <item>Administrador</item>
        <item>Jefe</item>
        <item>Arrendador</item>
    </string-array>
    <string name="made_by">Registered by:</string>
    <string name="category">Category:</string>
    <string name="subcategory">Subcategory:</string>
    <string name="date_and_time">Date and Time:</string>
    <string name="notes">Notes:</string>
    <string name="to_date">To</string>
    <string name="From_date">From</string>
    <string name="clear">Clear</string>
    <string name="from_display">\" from \"</string>
    <string name="for_display">\" for \"</string>
    <string name="few_moments_ago">Few moments ago</string>
    <string name="minutes_ago">\" minutes ago\"</string>
    <string name="yesterday_at">\"Yesterday at \"</string>
    <string name="role_display"> Role: </string>
    <string name="has_deposited_updated">" has deposited "</string>
    <string name="server_client_id">"345966862315-cdfn2l56h55tqr1c1fbhvj668vpl0t00.apps.googleusercontent.com"</string>
    <string name="succesful_registration">Successful Registration to db</string>
    <string name="unsuccesful_registration">Unsuccessful Registration to db</string>
    <string name="Access_denied">Access denied for </string>
    <string name="askForPermission">Please ask for authorization to access</string>
    <string name="askForValidCompanyId">Please insert a valid Companie\'s Id</string>
    <string name="noCompanyIdTyped">Please type the id of the Company</string>
    <string name="accounts">Accounts</string>
    <string name="select_a_stakeholder">Select a Stakeholder</string>
    <string name="error_finding_microAccount">error finding microAccount</string>
    <string name="select_micro_account">Select a micro-account</string>
    <string name="search">Search</string>
    <string name="micro_accounts">Micro Accounts</string>
    <string name="transaction_display">Transaction Display</string>
    <string name="account">Account:</string>
    <string name="concerning">Concerning:</string>
    <string name="add_account">Add account</string>
    <string name="name_of_account">Name Of Account</string>
    <string name="paid_to">Paid to </string>
    <string name="title">Title</string>
    <string name="no_transactions">No transactions to show</string>
    <string name="no_contracts">No contracts to show</string>
    <string name="start">Start</string>
    <string name="end">End:</string>
    <string-array name="frequency">
        <item>One-time</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Every two weeks</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="made_date">Registered date:</string>
    <string name="subContracts">Payments:</string>
    <string name="cancel">Cancel</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string-array name="frequency_names">
        <item>days</item>
        <item>weeks</item>
        <item>months</item>
        <item>quarters</item>
        <item>years</item>
    </string-array>
    <string name="words_">\"Words: \"</string>
    <string name="choose_category">Choose a Category</string>
    <string name="no_category">No Category</string>
    <string name="default_categories">Default Categories</string>
    <string name="custom_categories">Custom Categories</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="add_new_category">Add New Category</string>
    <string name="custom_category">Custom Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_icon">Category emoji</string>
    <string name="invalid_icon_please_enter_an_emoji">Invalid Icon, please enter an emoji.</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="editing_custom_category">Editing Category</string>
    <string name="add_new_cat">Add New Category</string>
    <string name="dismiss">Dismiss</string>
    <string name="not_recorded">Not Recorded</string>
    <string name="balance">Balance</string>
    <string name="error_loading">Error Loading...</string>
    <string name="add_custom_category">Add Custom Category</string>
    <string name="time">Hour:</string>
    <string name="date">Date:</string>
    <string name="duration">Duration</string>
    <string name="payments_left">Payments left:</string>
    <string name="next_payment">Next subContract:</string>
    <string name="please_fill_in_duration">Please fill in duration</string>
    <string name="select_starting_date">Please select starting date</string>
    <string name="error_no_payments_can_be_made">ERROR: No subContracts can be made during these dates</string>
    <string name="every">Every </string>
    <string name="select_frequency">Please select frequency</string>
    <string name="number_of_payments">Number of subContracts</string>
    <string name="date_before_error">Date chosen is before today</string>
    <string name="error_period">ERROR: the last Future Transactions are not a full period. Please use a lower unit of time for the duration.</string>
    <string name="camara_permission_denied">Camara permission is required to use the camara</string>
    <string name="upload_failed">Upload has failed</string>
    <string name="image_uploaded">Image Uploaded</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="take_a_picture">Take A Picture</string>
    <string name="add_an_image">Add An Image</string>
    <string name="photo_captured">Photo Captured</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Transaction_upload_failed">Transaction upload failed, please register the transaction again.</string>
    <string name="stakeholders">Stakeholders</string>
    <string name="image_captured">Image Captured</string>
    <string name="summary">Summary</string>
    <string name="properties">Properties</string>
    <string name="analytics">Analytics</string>
    <string name="stakeholdersPlural">Stakeholders</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="receivables">Receivables</string>
    <string name="payables">Payables</string>
    <string name="late">Late</string>
    <string name="future">Future</string>
    <string name="completed">Completed</string>
    <string name="scheduled_transaction">Scheduled Transaction</string>
    <string name="select_a_transaction">Select a Transaction</string>
    <string name="total_amount_to_pay">Total amount to pay: </string>
    <string name="amount_paid">Amount paid: </string>
    <string name="amount_left">Amount left: </string>
    <string name="increase_amount_paid">Increase amount paid</string>
    <string name="warning_amount_paid_will_be_larger_than_amount_to_pay">Warning! Amount paid will be larger than amount to pay.</string>
    <string name="execute_pending_transaction">Execute Pending Transaction</string>
    <string name="input_amount_to_pay">Please input the amount to pay.</string>
    <string name="fully_paid">This transaction is fully paid.</string>
    <string name="check_errors">Please check for errors.</string>
    <string name="deleted_transactions">Deleted Transactions</string>
    <string name="Accounts_participants">Participants</string>
    <string name="starting_balanace_title">Starting balanace</string>
    <string name="name_of_account_title">Name of account:</string>
    <string name="new_participant_s_email">New participant\'s email...</string>
    <string name="add">Add</string>
    <string name="account_settings">Account Settings</string>
    <string name="please_insert_a_valid_email">Please, insert a valid email.</string>
    <string name="confirm_email">Confirm email</string>
    <string name="starting_balance">Starting Balance (Default $0.00)</string>
    <string name="none">None</string>
</resources>