<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/icon_transaction"
        android:title="@string/transactions" />

    <item
        android:id="@+id/navigation_shops"
        android:icon="@drawable/icon_shops"
        android:title="@string/shops_storage" />
    <item
        android:id="@+id/navigation_tenants"
        android:icon="@drawable/icon_tenants"
        android:title="@string/tenants" />
    <item
        android:id="@+id/navigation_employees"
        android:icon="@drawable/icon_employees"
        android:title="@string/employees" />

</menu>