<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.transactions.scheduledTransaction.ExecuteScheduledTransaction" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/execute_PayOrReceive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/payables"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/execute_stakeholder_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/stakeholder" />

        <TextView
            android:id="@+id/execute_choose_stakeholder"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/rec_view_gray"
            android:gravity="center"
            android:text="@string/select_a_stakeholder" />

        <TextView
            android:id="@+id/execute_scheduled_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/scheduled_transaction" />

        <TextView
            android:id="@+id/execute_choose_transaction"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/rec_view_gray"
            android:gravity="center"
            android:text="@string/select_a_transaction" />

        <TextView
            android:id="@+id/execute_amount_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/total_amount_to_pay" />

        <TextView
            android:id="@+id/execute_amount_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/amount_paid" />

        <TextView
            android:id="@+id/execute_amount_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/amount_left" />

        <EditText
            android:id="@+id/execute_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/increase_amount_paid"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/execute_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning_amount_paid_will_be_larger_than_amount_to_pay"
            android:textColor="@color/light_red_warning"
            android:visibility="gone" />

        <Button
            android:id="@+id/execute_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_buttons"
            android:text="@string/confirm" />

    </LinearLayout>
</ScrollView>