<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topRightMenu"
    tools:context=".MainActivity">
    <group android:id="@+id/basic_menu_options">

        <item android:id="@+id/action_delete"
            android:icon="@drawable/ic_baseline_delete_24"
            android:title="@string/delete"
            app:showAsAction="always"/>
        <item android:id="@+id/action_edit"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/edit"
            app:showAsAction="always"/>
        <item android:id="@+id/action_add"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="add"
            app:showAsAction="always"/>
        <item android:id="@+id/action_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search"
            app:showAsAction="always"/>
        <item android:id="@+id/action_filter"
            android:icon="@drawable/ic_baseline_filter_alt_24"
            android:title="@string/filter"
            app:showAsAction="always"/>
        <item android:id="@+id/action_bottom_sheet"
            android:icon="@drawable/ic_baseline_menu_24"
            android:title="bottonSheet"
            app:showAsAction="always"/>


    </group>



</menu>