<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/contract_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:paddingBottom="15dp" />

    <EditText
        android:id="@+id/contract_new_notes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/notes"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/contract_new_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/contract_new_add"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>