<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    >


    <CheckBox
        android:id="@+id/check_box_late"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/late"
        android:textSize="18sp" />
    <CheckBox
        android:id="@+id/check_box_future"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/future"
        android:textSize="18sp" />
    <CheckBox
        android:id="@+id/check_box_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/completed"
        android:textSize="18sp" />

</LinearLayout>