<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    >

    <TextView
        android:id="@+id/text_categoryDialog_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/custom_category"
        android:gravity="center"
        android:background="@color/rec_view_gray"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="30dp">
        <TextView
            android:id="@+id/text_categoryDialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_name" />

        <EditText
            android:id="@+id/editText_category_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/category_name"
            android:autofillHints="text"
            />
        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/text_categoryDialog_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_icon" />

        <EditText
            android:id="@+id/editText_category_Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/category_icon"
            android:autofillHints="text"
            />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/background_buttons"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/background_buttons"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>