<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp"
    tools:context=".fragments.transactions.NewTransaction.TransactionNew">

    <Button
        android:id="@+id/btn_delete_new_stakeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_buttons_red"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_confirm"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirm"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/label_stakeholder_new_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/stakeholder"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/ed_txt_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_txt_name" />

    <TextView
        android:id="@+id/text_stakeholder_new_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/rec_view_gray"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/none"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/label_stakeholder_new_property"
        app:layout_constraintTop_toBottomOf="@+id/label_stakeholder_new_property" />

    <EditText
        android:id="@+id/ed_txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:background="@drawable/background_buttons"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_stakeholder_new_property" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>