<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".fragments.accounts.AddNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        >

        <EditText
            android:id="@+id/ed_txt_name_Account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_account"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/ed_txt_starting_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/starting_balance"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_txt_name_Account"

            />

        <Button
            android:id="@+id/btn_confirm_NewAccount"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_buttons"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_txt_starting_balance" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>